# Sofomo

./: CMakeLists.txt  README.md
IP2Data/: CMakeLists.txt
IP2Data/include/IP2Data/: DatabaseManager.h  GeolocationData.h  IP2DataManager.h  IpData.h  Server.h  WebAddress.h
IP2Data/include/private/: Server.h
IP2Data/include/public/IP2Data/: IP2DataManager.h
IP2Data/src/: DatabaseManager.cpp  IP2DataManager.cpp  Server.cpp  WebAddress.cpp
include/: AppController.h  GeolocationDataInfo.h
src/: AppController.cpp  GeolocationDataBox.qml  GeolocationDataInfo.cpp  Main.qml  main.cpp
tests/: CMakeLists.txt
tests/IP2Data/include/: DatabaseManagerTest.h  ServerTest.h  WebAddressTest.h
tests/IP2Data/src/: DatabaseManagerTest.cpp  ServerTest.cpp  WebAddressTest.cpp  main.cpp
tests/src/IP2Data/: ServerTest.cpp
